[tool.poetry]
name = "coinman"
version = "0.1.0"
description = "Coinset development framework for Chia network"
authors = ["Sebastjan <trepca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
chia-blockchain = "^1.3.1"
aiohttp-rpc = "^1.0.0"
pytimeparse = "^1.1.8"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
coinman = 'coinman.cli:cli'
cm = 'coinman.cli:cli'
